[gd_scene load_steps=2 format=3 uid="uid://trolley_problem_overlay"]

[ext_resource type="Script" path="res://1.Codebase/src/scripts/ui/trolley_problem_overlay.gd" id="1_script"]

[node name="TrolleyProblemOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Dim" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.02, 0.02, 0.95)

[node name="Root" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContentPanel" type="PanelContainer" parent="Root"]
custom_minimum_size = Vector2(800, 600)
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Root/ContentPanel"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="VBox" type="VBoxContainer" parent="Root/ContentPanel/Margin"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Header" type="VBoxContainer" parent="Root/ContentPanel/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Root/ContentPanel/Margin/VBox/Header"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 32
text = "MORAL DILEMMA"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Root/ContentPanel/Margin/VBox/Header"]
layout_mode = 2

[node name="ScenarioText" type="RichTextLabel" parent="Root/ContentPanel/Margin/VBox"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]Scenario description goes here...[/center]"
fit_content = true

[node name="ChoicesContainer" type="VBoxContainer" parent="Root/ContentPanel/Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 15
